--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <title>BlackMountainFestival</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/fav_CfV_icon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,16 +19,18 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Black Mountain Festival</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Throwback">Throwback</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contributor">Contributor</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+
         <!-- Masthead-->
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
@@ -39,20 +41,98 @@
                 </div>
             </div>
         </header>
+
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-                        <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                        <h6 class="text-white mb-4">Το Black Mountain Festival είναι ένα ξεχωριστό φεστιβάλ στην περιοχή του Μαύρου Βουνού στους Μανιάκους Καστοριάς. Φέτος για τρίτη συνεχή χρονιά διοργανώνουμε ένα φεστιβάλ γεμάτο μουσικές, παιχνίδια, δραστηριότητες για όλες τις ηλικίες όπου όλοι οι συμμετέχοντες γίνονται μια παρέα.</h6>
+                        <h3 class="text-white mb-4">Ποιοι είμαστε;</h3>
+                        <p class="text-white-50">Είμαστε ο Σύλλογος Φίλων του Περιβάλλοντος Μανιακών αλλά πάνω από όλα είμαστε μία παρέα που αγαπάμε και φροντίζουμε το περιβάλλον, νοιαζόμαστε και στηρίζουμε τους συνανθρώπους μας από το 1999. </br> 
+                        Από την αρχή του συλλόγου μας σκοπός ήταν να πρασινίσουμε την περιοχή μας, να ενημερώσουμε τους μικρούς και μεγάλους φίλους, για την προστασία του περιβάλλοντος και να τους ενεργοποιήσουμε σε περιβαλλοντικές δράσεις.</p>
+                        <h3 class="text-white mb-4">Πώς τα καταφέραμε όλα αυτά;</h3>
+                        <p class="text-white-50">Είμαστε μία δεμένη παρέα και αυτός είναι ο βασικός λόγος για τον οποίο  τα καταφέρνουμε.  Στην αρχή της ίδρυσης του συλλόγου ήμασταν μόλις 5 άτομα, στην συνέχεια γίναμε 15 και σήμερα στις δράσεις συμμετέχουν  πολλοί φίλοι και πολλοί σύλλογοι και είμαστε πολύ ικανοποιημένοι και ευγνώμονες γι'αυτό.</p>
+                        <h3 class="text-white mb-4">Ποιες είναι δράσεις μας;</h3>
+                        <p class="text-white-50">Δενδροφυτεύσεις, περιποίηση πάρκων, δρόμων, αυλών, συλλογή ανακυκλώσιμων υλικών και φυσικά το Black Mountain Festival.</p>
+                        <h3 class="text-white mb-4">Λίγα λόγια για το Black Mountain Festival</h3>
+                        <p class="text-white-50">Συνήθως όταν αναφερόμαστε σε Φεστιβάλ το μυαλό μας πηγαίνει στη μουσική, στο χορό και γενικότερα σε ένα γιορταστικό κλίμα. Έπειτα από συζητήσεις διαμορφώνουμε το πρόγραμμα των εκδηλώσεων που διαρκεί όλη την ημέρα και διοργανώνονται πλήθος δραστηριοτήτων σε συνεργασία με τοπικούς συλλόγους: όπως η ιππασία, τοξοβολία, αγώνες ποδηλάτων, μότο, πεζοπορίες, τσουλήθρες και πολλές ακόμα δραστηριότητες για μικρούς και μεγάλους. </br>
+                            Όμως ίσως σημαντικότερο και από την διασκέδαση, είναι η ενημέρωση και η ευαισθητοποίηση, στα πλαίσια του φεστιβάλ, για κοινωνικά θέματα. </p>
+                        <h3 class="text-white mb-4">ΚΟΙΝΩΝΙΚΟΣ ΧΑΡΑΚΤΗΡΑΣ ΦΕΣΤΙΒΑΛ</h3>
+                        <p class="text-white-50">Καθ'όλη τη διάρκεια του φεστιβάλ θα υπάρχουν δράσεις ανάπτυξης περιβαλλοντικής και οικολογικής συνείδησης. Βασική επιδίωξή μας είναι να διαμορφώσουμε ένα πλούσιο πεδίο διάδρασης τόσο των κατοίκων της περιοχής όσο και των επισκεπτών του τόπου. Για αυτό και στο 3ο Black mountain festival θα συνδιοργανώσουμε μαζί με τοπικό πρόγραμμα των Special Olympics Hellas της Καστοριάς μία δράση με την ονομασία «Βαδίζουμε Μαζί».</p>
+                        <h4 class="text-white mb-4"> Σε όλες τις δράσεις μας προτεραιότητα έχει η ασφάλεια. Γι'αυτό το 3ο Black mountain festival θα διεξαχθεί σύμφωνα με τις υποδείξεις του ΕΟΔΥ και λαμβάνοντας όλα τα απαραίτητα μέτρα προστασίας.</h4>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="" />
+                <img class="img-fluid" src="assets/img/FBcover.png" alt="" />
             </div>
         </section>
-        <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+
+        <!-- Throwback-->
+        <section class="Throwback-section bg-light" id="Throwback">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-8 mx-auto">
+                        <div id="Carousel" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                              <li data-target="#Carousel" data-slide-to="0" class="active"></li>
+                              <li data-target="#Carousel" data-slide-to="1"></li>
+                              <li data-target="#Carousel" data-slide-to="2"></li>
+                              <li data-target="#Carousel" data-slide-to="3"></li>
+                              <li data-target="#Carousel" data-slide-to="4"></li>
+                              <li data-target="#Carousel" data-slide-to="5"></li>
+                              <li data-target="#Carousel" data-slide-to="6"></li>
+                              <li data-target="#Carousel" data-slide-to="7"></li>
+                              <li data-target="#Carousel" data-slide-to="8"></li>
+                              <li data-target="#Carousel" data-slide-to="9"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-100" src="assets/img/1.jpg" alt="First slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/2.jpg" alt="Third slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/3.jpg" alt="Third slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/4.jpg" alt="4 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/5.jpg" alt="5 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/6.jpg" alt="6 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/7.jpg" alt="7 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/8.jpg" alt="8 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/9.jpg" alt="9 slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/10.jpg" alt="10 slide">
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#Carousel" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#Carousel" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contributor-->
+        <section class="Contributor-section bg-light" id="Contributor">
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
@@ -60,7 +140,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial Contributor! Download it, customize it, and publish your website!</p>
                         </div>
                     </div>
                 </div>
@@ -96,27 +176,16 @@
                 </div>
             </div>
         </section>
-        <!-- Signup-->
-        <section class="signup-section" id="signup">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <form class="form-inline d-flex"><input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." /><button class="btn btn-primary mx-auto" type="submit">Subscribe</button></form>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section class="contact-section bg-light"  id="Contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
+                                <h4 class="text-uppercase m-0">Υπεύθυνος επικοινωνίας</h4>
                                 <hr class="my-4" />
                                 <div class="small text-black-50">4923 Market Street, Orlando FL</div>
                             </div>
@@ -128,7 +197,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">socialmediabmf@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -136,9 +205,9 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
+                                <h4 class="text-uppercase m-0">Τηλέφωνο επικοινωνίας</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50"> +30 6976200257</div>
                             </div>
                         </div>
                     </div>
