--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container d-flex h-100 align-items-center">
+           <!-- <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
                 </div>
-            </div>
+            </div>-->
         </header>
 
         <!-- About-->
@@ -63,7 +63,6 @@
                         <h4 class="text-white mb-4"> Σε όλες τις δράσεις μας προτεραιότητα έχει η ασφάλεια. Γι'αυτό το 3ο Black mountain festival θα διεξαχθεί σύμφωνα με τις υποδείξεις του ΕΟΔΥ και λαμβάνοντας όλα τα απαραίτητα μέτρα προστασίας.</h4>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/FBcover.png" alt="" />
             </div>
         </section>
 
