changes in style, upload social

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h6 class="text-white mb-4">Το Black Mountain Festival είναι ένα ξεχωριστό φεστιβάλ στην περιοχή του Μαύρου Βουνού στους Μανιάκους Καστοριάς. Φέτος για τρίτη συνεχή χρονιά διοργανώνουμε ένα φεστιβάλ γεμάτο μουσικές, παιχνίδια, δραστηριότητες για όλες τις ηλικίες όπου όλοι οι συμμετέχοντες γίνονται μια παρέα.</h6>
                         <h3 class="text-white mb-4">Ποιοι είμαστε;</h3>
-                        <p class="text-white-50">Είμαστε ο Σύλλογος Φίλων του Περιβάλλοντος Μανιακών αλλά πάνω από όλα είμαστε μία παρέα που αγαπάμε και φροντίζουμε το περιβάλλον, νοιαζόμαστε και στηρίζουμε τους συνανθρώπους μας από το 1999. </br> 
+                        <p class="text-white-50">Είμαστε ο Σύλλογος Φίλων του Περιβάλλοντος Μανιακών αλλά πάνω από όλα είμαστε μία παρέα που αγαπάμε και φροντίζουμε το περιβάλλον, νοιαζόμαστε και στηρίζουμε τους συνανθρώπους μας από το 1999. </br>
                         Από την αρχή του συλλόγου μας σκοπός ήταν να πρασινίσουμε την περιοχή μας, να ενημερώσουμε τους μικρούς και μεγάλους φίλους, για την προστασία του περιβάλλοντος και να τους ενεργοποιήσουμε σε περιβαλλοντικές δράσεις.</p>
                         <h3 class="text-white mb-4">Πώς τα καταφέραμε όλα αυτά;</h3>
                         <p class="text-white-50">Είμαστε μία δεμένη παρέα και αυτός είναι ο βασικός λόγος για τον οποίο  τα καταφέρνουμε.  Στην αρχή της ίδρυσης του συλλόγου ήμασταν μόλις 5 άτομα, στην συνέχεια γίναμε 15 και σήμερα στις δράσεις συμμετέχουν  πολλοί φίλοι και πολλοί σύλλογοι και είμαστε πολύ ικανοποιημένοι και ευγνώμονες γι'αυτό.</p>
@@ -212,7 +212,9 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com/blackmountainfestival"><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2" href="https://www.facebook.com/blackmountainfest/"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://www.youtube.com/channel/UCH4MnfyRJvv8vjK_UPWfnDg?view_as=subscriber"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </section>
