changes in fonts

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h3 class="text-white mb-4">Λίγα λόγια για το Black Mountain Festival</h3>
                         <p class="text-white-50">Συνήθως όταν αναφερόμαστε σε Φεστιβάλ το μυαλό μας πηγαίνει στη μουσική, στο χορό και γενικότερα σε ένα γιορταστικό κλίμα. Έπειτα από συζητήσεις διαμορφώνουμε το πρόγραμμα των εκδηλώσεων που διαρκεί όλη την ημέρα και διοργανώνονται πλήθος δραστηριοτήτων σε συνεργασία με τοπικούς συλλόγους: όπως η ιππασία, τοξοβολία, αγώνες ποδηλάτων, μότο, πεζοπορίες, τσουλήθρες και πολλές ακόμα δραστηριότητες για μικρούς και μεγάλους. </br>
                             Όμως ίσως σημαντικότερο και από την διασκέδαση, είναι η ενημέρωση και η ευαισθητοποίηση, στα πλαίσια του φεστιβάλ, για κοινωνικά θέματα. </p>
-                        <h3 class="text-white mb-4">ΚΟΙΝΩΝΙΚΟΣ ΧΑΡΑΚΤΗΡΑΣ ΦΕΣΤΙΒΑΛ</h3>
+                        <h3 class="text-white mb-4">Κοινωνικός Χαρακτήρας Φεστιβάλ</h3>
                         <p class="text-white-50">Καθ'όλη τη διάρκεια του φεστιβάλ θα υπάρχουν δράσεις ανάπτυξης περιβαλλοντικής και οικολογικής συνείδησης. Βασική επιδίωξή μας είναι να διαμορφώσουμε ένα πλούσιο πεδίο διάδρασης τόσο των κατοίκων της περιοχής όσο και των επισκεπτών του τόπου. Για αυτό και στο 3ο Black mountain festival θα συνδιοργανώσουμε μαζί με τοπικό πρόγραμμα των Special Olympics Hellas της Καστοριάς μία δράση με την ονομασία «Βαδίζουμε Μαζί».</p>
                         <h4 class="text-white mb-4"> Σε όλες τις δράσεις μας προτεραιότητα έχει η ασφάλεια. Γι'αυτό το 3ο Black mountain festival θα διεξαχθεί σύμφωνα με τις υποδείξεις του ΕΟΔΥ και λαμβάνοντας όλα τα απαραίτητα μέτρα προστασίας.</h4>
                     </div>
