--- a/index.html
+++ b/index.html
@@ -130,21 +130,30 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Contributor-->
-        <section class="Contributor-section bg-light" id="Contributor">
-            <div class="container">
+              <div class="container">
+                <div class="row"><div class="mb-lg-5"></div></div>
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7">
+                      <iframe  class="img-fluid mb-3 mb-lg-0" width="853" height="480"
+                        src="https://youtu.be/U4FgXf-ZD6A?autoplay=1">
+                      </iframe>
+
+                    </div>
                     <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial Contributor! Download it, customize it, and publish your website!</p>
+                        <div class="featured-text text-center text-lg-center">
+                            <h4>BMF 2018... BMF 2019... </h4>
+                            <p class="text-black-50 mb-0">Ένα τριήμερο γεμάτο δράσεις, μουσική και διασκέδαση! Μoto, ποδηλασία, ιππασία, τοξοβολία, δραστηριότητες για παιδιά και πολλή πολλή μουσική! Περιμένοντας το #BMF2020! Οι προετοιμασίες έχουν ξεκινήσει! Mείνετε συντονισμένοι!</p>
                         </div>
                     </div>
                 </div>
+              </div>
+
+                      <!-- Contributor-->
+                </section>
+                <section class="Contributor-section bg-light" id="Contributor">
+                    <div class="container">
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
