--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="col-lg-6">
                       <table>
                         <tr>
-                          <td> <img class="img-fluid" src="assets/img/sillogos-periv.png" alt="" /></td>
+                          <td style="text-align:center;"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></td>
                           <td> <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></td>
                         </tr>
                         <tr>
