changes in some shit

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                                 <img class="d-block w-100" src="assets/img/1.jpg" alt="First slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/img/2.2.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/2.3.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/img/3.2.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="assets/img/3.3.jpg" alt="Third slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/img/4.2.jpg" alt="4 slide">
+                                <img class="d-block w-100" src="assets/img/4.3.jpg" alt="4 slide">
                               </div>
                               <div class="carousel-item">
                                 <img class="d-block w-100" src="assets/img/5.jpg" alt="5 slide">
@@ -149,6 +149,7 @@
                     </div>
                 </div>
               </div>
+              <div class="row"><div class="mb-lg-5"></div></div>
 
                       <!-- Contributor-->
                 </section>
@@ -157,7 +158,7 @@
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6">
-                      <table>
+                      <table style="background-color: #fafafa;">
                         <tr>
                           <td style="text-align:center;"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></td>
                           <td> <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></td>
