--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Υπεύθυνος επικοινωνίας</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                                <div class="small text-black-50">Ντίνος Μπουτσιούλης</div>
                             </div>
                         </div>
                     </div>
