--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
                       <iframe  class="img-fluid mb-3 mb-lg-0" width="853" height="480"
-                        src="https://youtu.be/U4FgXf-ZD6A?autoplay=1">
+                        src="https://youtu.be/U4FgXf-ZD6A">
                       </iframe>
 
                     </div>
