--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                      <iframe  class="img-fluid mb-3 mb-lg-0" width="420" height="315"
-                        src="https://www.youtube.com/embed/U4FgXf-ZD6A?autoplay=1">
+                      <iframe  class="img-fluid mb-3 mb-lg-0" width="1080" height="1920"
+                        src="https://www.youtube.com/embed/U4FgXf-ZD6A">
                       </iframe>
 
                     </div>
