--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
               <div class="container">
                 <div class="row"><div class="mb-lg-5"></div></div>
                 <!-- Featured Project Row-->
-                <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                <div class="row align-items-center no-gutters mb-4 mb-lg-10">
                     <div class="col-xl-8 col-lg-7">
-                      <iframe  class="img-fluid mb-3 mb-lg-0" width="1080" height="1920"
+                      <iframe  class="img-fluid mb-3 mb-lg-10" width=100% height=100%
                         src="https://www.youtube.com/embed/U4FgXf-ZD6A">
                       </iframe>
 
                     </div>
-                    <div class="col-xl-4 col-lg-5">
+                    <div class="col-xl-4 col-lg-10">
                         <div class="featured-text text-center text-lg-center">
                             <h4>BMF 2018... BMF 2019... </h4>
                             <p class="text-black-50 mb-0">Ένα τριήμερο γεμάτο δράσεις, μουσική και διασκέδαση! Μoto, ποδηλασία, ιππασία, τοξοβολία, δραστηριότητες για παιδιά και πολλή πολλή μουσική! Περιμένοντας το #BMF2020! Οι προετοιμασίες έχουν ξεκινήσει! Mείνετε συντονισμένοι!</p>
