add footer details and links in collaborations

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                     <div class="col-lg-6">
                       <table style="background-color: #fafafa;">
                         <tr>
-                          <td style="text-align:center;"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></td>
-                          <td> <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></td>
+                        <td style="text-align:center;"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
+                        <td> <a href="http://www.specialolympicshellas.gr/">  <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></a></td>
                         </tr>
                         <tr>
-                          <td> <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></td>
-                          <td> <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" /></td>
+                        <td><a href="https://www.facebook.com/ieeesbkastoria/">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></a></td>
+                      <td>   <a href="https://cdm.uowm.gr/">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" /></a></td>
                         </tr>
                       </table>
                   </div>
@@ -242,7 +242,8 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © BlackMountainFestival 2020 All rights reserved | This template is made <a href="https://startbootstrap.com/themes/grayscale/" target="_blank"> Grayscale</a> | </br>
+          Modify by <a href="https://gr.linkedin.com/in/georgia-fasoula" target="_blank">Georgia Fasoula</a> and <a href="https://gr.linkedin.com/in/athanasios-mourtzoukos-683902153" target="_blank">Thanos Mourtzoukos</a></div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
