added target blank in links

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                     <div class="col-lg-6">
                       <table style="background-color: #fafafa;">
                         <tr>
-                        <td style="text-align:center;"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
-                        <td> <a href="http://www.specialolympicshellas.gr/">  <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></a></td>
+                        <td style="text-align:center;"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn target="_blank""> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
+                        <td> <a href="http://www.specialolympicshellas.gr/ target="_blank"">  <img class="img-fluid" src="assets/img/special-olym.png" alt="" /></a></td>
                         </tr>
                         <tr>
-                        <td><a href="https://www.facebook.com/ieeesbkastoria/">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></a></td>
-                      <td>   <a href="https://cdm.uowm.gr/">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" /></a></td>
+                        <td><a href="https://www.facebook.com/ieeesbkastoria/ target="_blank"">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></a></td>
+                      <td>   <a href="https://cdm.uowm.gr/ target="_blank"">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" /></a></td>
                         </tr>
                       </table>
                   </div>
@@ -235,9 +235,9 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.instagram.com/blackmountainfestival"><i class="fab fa-instagram"></i></a>
-                    <a class="mx-2" href="https://www.facebook.com/blackmountainfest/"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="https://www.youtube.com/channel/UCH4MnfyRJvv8vjK_UPWfnDg?view_as=subscriber"><i class="fab fa-youtube"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com/blackmountainfestival target="_blank""><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2" href="https://www.facebook.com/blackmountainfest/ target="_blank""><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://www.youtube.com/channel/UCH4MnfyRJvv8vjK_UPWfnDg?view_as=subscriber target="_blank""><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </section>
