--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.instagram.com/blackmountainfestival target="_blank""><i class="fab fa-instagram"></i></a>
-                    <a class="mx-2" href="https://www.facebook.com/blackmountainfest/ target="_blank""><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="https://www.youtube.com/channel/UCH4MnfyRJvv8vjK_UPWfnDg?view_as=subscriber target="_blank""><i class="fab fa-youtube"></i></a>
+                    <a class="mx-2 mb-5" href="https://www.instagram.com/blackmountainfestival target="_blank""><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2 mb-5" href="https://www.facebook.com/blackmountainfest/ target="_blank""><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2 mb-5" href="https://www.youtube.com/channel/UCH4MnfyRJvv8vjK_UPWfnDg?view_as=subscriber target="_blank""><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </section>
