--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 </div>
             </div>
         </section>
+         <div class="Contributor-section bg-light">
         <div class="d-flex">
             <div class="container">
 
@@ -157,6 +158,7 @@
             </div>
             </div>
             </div>
+          </div>
 
                       <!-- Contributor-->
 
