--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                     <div class="col-lg-6">
                       <table style="background-color: #fafafa;">
                         <tr>
-                        <td style="left:25%"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn" target="_blank"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
-                        <td style="right:25%"> <a href="https://www.facebook.com/Kastoria-Outdoors-679511872101827/" target="_blank"> <img class="img-fluid" src="assets/img/kastoria-outdoors.png" alt="" /></a></td>
+                        <td style="text-align:center"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn" target="_blank"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
+                        <!-- <td> <a href="https://www.facebook.com/Kastoria-Outdoors-679511872101827/" target="_blank"> <img class="img-fluid" src="assets/img/kastoria-outdoors.png" alt="" /></a></td> -->
                         </tr>
                         <tr>
                         <td> <a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid" src="assets/img/special-olympics.png" alt="" /></a></td>
