--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="Contributor-section bg-light">
+                <div class="row"><div class="mb-lg-5"></div></div>
+
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/sponsors.png" alt="" /></div>
@@ -210,7 +211,6 @@
                     </div>
                 </div>
             </div>
-          </div>
         </section>
 
         <!-- Contact-->
