changes in collaborations

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <!-- <td> <a href="https://www.facebook.com/Kastoria-Outdoors-679511872101827/" target="_blank"> <img class="img-fluid" src="assets/img/kastoria-outdoors.png" alt="" /></a></td> -->
                         </tr>
                         <tr>
-                        <td> <a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid" src="assets/img/special-olympics.png" alt="" /></a></td>
+                        <td> <a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid" src="assets/img/specials.png" alt="" /></a></td>
                         </tr>
                         <tr>
                         <td><a href="https://www.facebook.com/ieeesbkastoria/" target="_blank">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></a></td>
