changes in sponsors

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                               <span class="carousel-control-next-icon" aria-hidden="true"></span>
                               <span class="sr-only">Next</span>
                             </a>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -167,20 +167,13 @@
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6">
-                      <table style="background-color: #fafafa;">
-                        <tr>
-                        <td style="text-align:center"> <a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn" target="_blank"> <img class="img-fluid" src="assets/img/sillogos-filon.png" alt="" /></a></td>
-                        <!-- <td> <a href="https://www.facebook.com/Kastoria-Outdoors-679511872101827/" target="_blank"> <img class="img-fluid" src="assets/img/kastoria-outdoors.png" alt="" /></a></td> -->
-                        </tr>
-                        <tr>
-                        <td> <a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid" src="assets/img/specials.png" alt="" /></a></td>
-                        </tr>
-                        <tr>
-                        <td><a href="https://www.facebook.com/ieeesbkastoria/" target="_blank">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt="" /></a></td>
-                      <td><a href="https://cdm.uowm.gr/" target="_blank">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" /></a></td>
-                        </tr>
-                      </table>
-                  </div>
+                        <div class="row justify-content-center"><a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn" target="_blank"> <img class="img-fluid center" src="assets/img/sillogos-filon.png" alt="" /></a></div>
+                        <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid center" src="assets/img/specials.png" alt="" /></a></div>
+                        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                            <div class="col-lg-7"><a href="https://www.facebook.com/ieeesbkastoria/" target="_blank">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt=""/></a></div>
+                            <div class="col-lg-5"><a href="https://cdm.uowm.gr/" target="_blank">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" width="250" height="300" /></a></div>
+                        </div>
+                    </div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
