add afiliated contrebutors

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
         <section class="Throwback-section bg-light" id="Throwback">
             <div class="container">
                 <div class="row"><div class="mb-lg-5"></div></div>
+                <div class="row"><div class="mb-lg-5"></div></div>
 
-                <div class="row">
+                <div class="row-cols-1 mb-lg-0">
                     <div class="col-xl-12 mx-auto">
                         <div id="Carousel" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
@@ -132,30 +133,28 @@
             </div>
         </section>
          <div class="Contributor-section bg-light">
-        <div class="d-flex">
-            <div class="container">
+            <div class="d-flex">
+                <div class="container">
 
             <!-- Project Two Row-->
-            <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6">
-                    <iframe class="img-fluid d-flex h-100 w-100"
-                    src="https://www.youtube.com/embed/U4FgXf-ZD6A" frameborder="0" allowfullscreen>
-                  </iframe>
-                </div>
-                <div class="col-lg-6 order-lg-first">
-                    <div class="bg-white text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4>BMF 2018... BMF 2019... </h4>
-                                <p>Ένα τριήμερο γεμάτο δράσεις, μουσική και διασκέδαση! Μoto, ποδηλασία, ιππασία, τοξοβολία, δραστηριότητες για παιδιά και πολλή πολλή μουσική! Περιμένοντας το #BMF2020! Οι προετοιμασίες έχουν ξεκινήσει! Mείνετε συντονισμένοι!</p>
-
-                                <!-- <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p> -->
-                                <hr class="d-none d-lg-block mb-0 mr-0" />
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6">
+                        <iframe class="img-fluid d-flex h-100 w-100"
+                            src="https://www.youtube.com/embed/U4FgXf-ZD6A" frameborder="0" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-white text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4>BMF 2018... BMF 2019... </h4>
+                                    <p>Ένα τριήμερο γεμάτο δράσεις, μουσική και διασκέδαση! Μoto, ποδηλασία, ιππασία, τοξοβολία, δραστηριότητες για παιδιά και πολλή πολλή μουσική! Περιμένοντας το #BMF2020! Οι προετοιμασίες έχουν ξεκινήσει! Mείνετε συντονισμένοι!</p>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
             </div>
           </div>
@@ -163,15 +162,16 @@
                       <!-- Contributor-->
 
                 <section class="Contributor-section bg-light" id="Contributor">
+                    <div class="d-flex">
                     <div class="container">
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
                         <div class="row justify-content-center"><a href="https://www.facebook.com/sillogos.filwn.tou.perivallontos.maniakwn" target="_blank"> <img class="img-fluid center" src="assets/img/sillogos-filon.png" alt="" /></a></div>
-                        <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank">  <img class="img-fluid center" src="assets/img/specials.png" alt="" /></a></div>
+                        <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank"><img class="img-fluid center" src="assets/img/specials.png" alt="" /></a></div>
                         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                            <div class="col-lg-7"><a href="https://www.facebook.com/ieeesbkastoria/" target="_blank">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt=""/></a></div>
-                            <div class="col-lg-5"><a href="https://cdm.uowm.gr/" target="_blank">  <img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" width="250" height="300" /></a></div>
+                            <div class="col-lg-7 justify-content-center"><a href="https://www.facebook.com/ieeesbkastoria/" target="_blank">   <img class="img-fluid" src="assets/img/ieeesbkastoria.png" alt=""/></a></div>
+                            <div class="col-lg-5 justify-content-center"><a href="https://cdm.uowm.gr/" target="_blank"><img class="img-fluid" src="assets/img/cdm-uowm.png" alt="" width="250" height="300" /></a></div>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -186,11 +186,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row"><div class="mb-lg-5"></div></div>
-
                 <!-- Project Two Row-->
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/sponsors.png" alt="" /></div>
+                <div class="row justify-content-center no-gutters" >
+                    <div class="col-lg-6 bg-white" style="background-color: #c9c9c922; border-bottom-right-radius: 40px">
+                        <div class="row justify-content-center"><div class="mb-lg-5"></div></div>
+                        <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank"><img class="img-fluid center" src="assets/img/aixmi_frontistirio.jpg" alt="" width="348" height="199" style="border-radius: 10px"/></a></div>
+                        <div class="row justify-content-center no-gutters mb-5 mb-lg-0"><div class="mb-lg-5"></div></div>                    
+                    </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -204,6 +206,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </section>
 
         <!-- Contact-->
