--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © BlackMountainFestival 2020 All rights reserved | This template is made <a href="https://startbootstrap.com/themes/grayscale/" target="_blank"> Grayscale</a> | </br>
-          Modify by <a href="https://gr.linkedin.com/in/georgia-fasoula" target="_blank">Georgia Fasoula</a> and <a href="https://gr.linkedin.com/in/athanasios-mourtzoukos-683902153" target="_blank">Thanos Mourtzoukos</a></div></footer>
+          Modified by <a href="https://gr.linkedin.com/in/georgia-fasoula" target="_blank">Georgia Fasoula</a> and <a href="https://gr.linkedin.com/in/athanasios-mourtzoukos-683902153" target="_blank">Thanos Mourtzoukos</a></div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
