--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="col-lg-6 bg-white" style="background-color: #c9c9c922; border-bottom-right-radius: 40px">
                         <div class="row justify-content-center"><div class="mb-lg-5"></div></div>
                         <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank"><img class="img-fluid center" src="assets/img/aixmi_frontistirio.jpg" alt="" width="348" height="199" style="border-radius: 10px"/></a></div>
-                        <div class="row justify-content-center no-gutters mb-5 mb-lg-0"><div class="mb-lg-5"></div></div>                    
+                        <div class="row justify-content-center no-gutters mb-5 mb-lg-0"><div class="mb-lg-5"></div></div>
                     </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
@@ -200,6 +200,28 @@
                                     <h4 class="text-white">Υποστηρικτές</h4>
                                     <!-- <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p> -->
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Project Three Row-->
+                    <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                        <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
+                            <div class="row justify-content-center"><a href="https://fonikastorias.gr/" target="_blank"> <img class="img-fluid center" src="assets/img/foni-kastorias.jpg" alt="" /></a></div>
+                            <div class="row justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" /></a></div>
+                            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                                <div class="col-lg-7 justify-content-center"><a href="https://inkastoria.gr/" target="_blank">   <img class="img-fluid" src="assets/img/logo-inkastoria.png" alt=""/></a></div>
+                                <div class="col-lg-5 justify-content-center"><a href="https://rockoverdose.gr/" target="_blank"><img class="img-fluid" src="assets/img/Rock-overduse.png" alt="" /></a></div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="bg-black text-center h-100 project">
+                                <div class="d-flex h-100">
+                                    <div class="project-text w-100 my-auto text-center text-lg-left">
+                                        <h4 class="text-white">Χοργηγοί Επικοινωνίας</h4>
+                                        <!-- <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p> -->
+                                        <hr class="d-none d-lg-block mb-0 ml-0" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
