Gia na to synexhsei h kyria

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters" >
-                    <div class="col-lg-6 bg-white" style="background-color: #c9c9c922; border-bottom-right-radius: 40px">
+                    <div class="col-lg-6 bg-white" style="border-bottom-right-radius: 40px">
                         <div class="row justify-content-center"><div class="mb-lg-5"></div></div>
                         <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank"><img class="img-fluid center" src="assets/img/aixmi_frontistirio.jpg" alt="" width="348" height="199" style="border-radius: 10px"/></a></div>
                         <div class="row justify-content-center no-gutters mb-5 mb-lg-0"><div class="mb-lg-5"></div></div>
@@ -207,11 +207,11 @@
                     <!-- Project Three Row-->
                     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                         <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
-                            <div class="row justify-content-center"><a href="https://fonikastorias.gr/" target="_blank"> <img class="img-fluid center" src="assets/img/foni-kastorias.jpg" alt="" /></a></div>
-                            <div class="row justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" /></a></div>
+                            <div class="row justify-content-center"><a href="https://fonikastorias.gr/" target="_blank"> <img class="img-fluid center" src="assets/img/foni-kastorias.jpg" alt="" width="348" height="199"/></a></div>
+                            <div class="row justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" width="348" height="199"/></a></div>
                             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                                 <div class="col-lg-7 justify-content-center"><a href="https://inkastoria.gr/" target="_blank">   <img class="img-fluid" src="assets/img/logo-inkastoria.png" alt=""/></a></div>
-                                <div class="col-lg-5 justify-content-center"><a href="https://rockoverdose.gr/" target="_blank"><img class="img-fluid" src="assets/img/Rock-overduse.png" alt="" /></a></div>
+                                <div class="col-lg-5 justify-content-center"><a href="https://rockoverdose.gr/" target="_blank"><img class="img-fluid center" src="assets/img/Rock-overduse.png" alt="" /></a></div>
                             </div>
                         </div>
                         <div class="col-lg-6">
