--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 <section class="Contributor-section bg-light" id="Contributor">
                     <div class="d-flex">
                     <div class="container">
+
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
@@ -186,6 +187,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="Contributor-section bg-light">
+
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters" >
                     <div class="col-lg-6 bg-white" style="border-bottom-right-radius: 40px">
@@ -204,6 +207,8 @@
                             </div>
                         </div>
                     </div>
+                  </div>
+                </div>
                     <!-- Project Three Row-->
                     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                         <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
