changes in contributors- project three row

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="Contributor-section bg-light">
 
+                <div class="Contributor-section bg-light">
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters" >
                     <div class="col-lg-6 bg-white" style="border-bottom-right-radius: 40px">
@@ -212,12 +212,14 @@
                     <!-- Project Three Row-->
                     <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                         <div class="col-lg-6 bg-white" style="border-top-left-radius: 40px">
-                            <div class="row justify-content-center"><a href="https://fonikastorias.gr/" target="_blank"> <img class="img-fluid center" src="assets/img/foni-kastorias.jpg" alt="" width="348" height="199"/></a></div>
-                            <div class="row justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" width="348" height="199"/></a></div>
-                            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                                <div class="col-lg-7 justify-content-center"><a href="https://inkastoria.gr/" target="_blank">   <img class="img-fluid" src="assets/img/logo-inkastoria.png" alt=""/></a></div>
+                          <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                            <div class="col-lg-5 mt-4 justify-content-center"><a href="https://fonikastorias.gr/" target="_blank"> <img class="img-fluid center" src="assets/img/foni-kastorias.jpg" alt="" width="348" height="199"/></a></div>
+                            <div class="col-lg-5 justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" width="348" height="199"/></a></div>
+                              </div>
+                          <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                                <div class="col-lg-4 justify-content-center"><a href="https://inkastoria.gr/" target="_blank">   <img class="img-fluid" src="assets/img/logo-inkastoria.png" alt=""/></a></div>
                                 <div class="col-lg-5 justify-content-center"><a href="https://rockoverdose.gr/" target="_blank"><img class="img-fluid center" src="assets/img/Rock-overduse.png" alt="" /></a></div>
-                            </div>
+                          </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="bg-black text-center h-100 project">
