--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters" >
                     <div class="col-lg-6 bg-white" style="border-bottom-right-radius: 40px">
-                        <div class="row justify-content-center"><div class="mb-lg-5"></div></div>
-                        <div class="row justify-content-center"><a href="http://www.specialolympicshellas.gr/" target="_blank"><img class="img-fluid center" src="assets/img/aixmi_frontistirio.jpg" alt="" width="348" height="199" style="border-radius: 10px"/></a></div>
-                        <div class="row justify-content-center no-gutters mb-5 mb-lg-0"><div class="mb-lg-5"></div></div>
+                      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                        <div class="col-lg-6 mt-4  justify-content-center"><a href="https://www.odobeton.gr/" target="_blank"><img class="img-fluid center" src="assets/img/odompeto.png" alt="" style="border-radius: 20px"/></a></div>
+                        <div class="col-lg-6 mt-4  justify-content-center"><a href="https://www.papavasiliou.com.gr/" target="_blank"><img class="img-fluid center" src="assets/img/DAUWIN.jpg" alt="" style="border-radius: 15px"/></a></div>
+                      </div>
+                      <div class=" row justify-content-center"><a href="https://www.facebook.com/%CE%A6%CF%81%CE%BF%CE%BD%CF%84%CE%B9%CF%83%CF%84%CE%AE%CF%81%CE%B9%CE%BF-%CE%91%CE%B9%CF%87%CE%BC%CE%AE-495462724166341" target="_blank"><img class="img-fluid center" src="assets/img/aixmi_frontistirio.jpg" alt="" width="261" height="150" style="border-radius: 15px"/></a></div>
                     </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
