adding site in beater.gr

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                               </div>
                           <div class="row justify-content-center no-gutters mb-6 mb-lg-0">
                             <div class="col-lg-3 mt-2 justify-content-center"><a href="https://www.allaboutfestivals.gr/" target="_blank"><img class="img-fluid center" src="assets/img/AAA-logo.png" alt="" width="348" height="199"/></a></div>
-                            <div class="col-lg-4 mt-4 justify-content-center"><a href="" target="_blank"><img class="img-fluid center" src="assets/img/beatergr.png" alt=""/></a></div>
+                            <div class="col-lg-4 mt-4 justify-content-center"><a href="https://beater.gr/" target="_blank"><img class="img-fluid center" src="assets/img/beatergr.png" alt=""/></a></div>
                             <div class="col-lg-5 justify-content-center"><a href="https://rockoverdose.gr/" target="_blank"><img class="img-fluid center" src="assets/img/Rock-overduse.png" alt="" width="200" height="200"/></a></div>
                           </div>
                         </div>
