--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
         <link href="css/countdown.css" rel="stylesheet">
         <script src="js/countdown.js"></script>
+        <link rel="stylesheet" href="common-css/jquery.classycountdown.css">
+        <link href="common-css/ionicons.css" rel="stylesheet">
+
 
     </head>
     <body id="page-top">
@@ -36,17 +40,24 @@
 
         <!-- Masthead-->
         <header class="masthead">
-           <!-- <div class="container d-flex h-100 align-items-center">
+        <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
+                    <!-- <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2> -->
+                    <!-- <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a> -->
+        				    <div class="py-5">
+        				        <div class="row">
+        				            <div class="col-lg-8 mx-auto">
+        								<!-- Countdown 1-->
+        								<div class="text-white p-5 text-center mb-5">
+        									<div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"></div>
+        								</div>
+        							</div>
+        						</div>
+        					</div>
                 </div>
-            </div>-->
+            </div>
             <!-- Countdown 1-->
-								<div class="text-white p-5 text-center mb-5">
-									<div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"></div>
-								</div>
         </header>
 
         <!-- About-->
