changes in countdown in css

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
-                    <div class="rounded bg-gradient-1 text-white shadow p-5 text-center mb-5">
-                        <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4"> 
+                    <div class="rounded text-white shadow p-5 text-center mb-5">
+                        <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4">
                             <span id="timer-days"></span>
                             <span id="timer-hours"></span>
                             <span id="timer-mins"></span>
                     </div>
                 </div>
             </div>-
+          </div>
             <script>
                 var endDate = new Date("Mar 15, 2021 12:00:00").getTime();
 
