--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <header class="masthead">
             <div class="container d-flex h-100 align-items-center mb-0">
                 <div class="mx-auto">
-                    <div class="rounded text-white shadow p-5 text-center">
+                    <div class="text-white p-5 text-center">
                         <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center pt-4">
                             <span><h3 id="timer-days"></h3></span>
                             <span><h3 id="timer-hours"></h3></span>
                             <span><h3 id="timer-mins"></h3></span>
-                    </div>
+                        </div>
                 </div>
             </div>-
           </div>
